lib_uftracedir = $(libdir)/uftrace
lib_uftrace_PROGRAMS = libuftrace.so
libuftrace_so_SOURCES = libuftrace.c prototype.c
libuftrace_so_CFLAGS = -fPIC -shared
libuftrace_so_LDADD = -ldwarf -lglib-2.0 -lbfd
bin_PROGRAMS = uftrace
noinst_PROGRAMS = uftrace-test
uftrace_SOURCES = uftrace.c
uftrace_test_SOURCES = uftrace-test.c
uftrace_test_CFLAGS = -g -O0 -finstrument-functions
uftrace_test_LDADD = -lpthread
man_MANS = uftrace.1
EXTRA_DIST = $(man_MANS) libuftrace.h prototype.h
